--- a/portfolio/src/components/sections/Loader.css
+++ b/portfolio/src/components/sections/Loader.css
@@ -1,24 +1,54 @@
-.loader{
+* {
+    margin: 0;
+    padding: 0;
+    box-sizing: border-box;
+  }
+  
+  .box {
     width: 100%;
     height: 100vh;
-    z-index: 10;
+    /* z-index: 10; */
     position: fixed;
-    top: 0;
-    left: 0;
+    /* top: 0; */
+    /* left: 0; */
     background: #18181b;
     display: flex;
+    flex-direction: column; 
     justify-content: center;
     align-items: center;
-}
-
-.loader svg{
-    width: 100%;
-}
-
-.loading-text{
-    width: 100%;
+  }
+  
+  #logo {
+    width: 300px; 
+    /* height: auto; */
+    margin-top: 118px;
+    margin-left: 190px;
+  }
+  
+  #logo path {
+    stroke-dasharray: 980.42;
+    stroke-dashoffset: 980.42;
+    animation: line-animate 2s linear infinite;
+  }
+  
+  @keyframes line-animate {
+    0% {
+      stroke-dashoffset: 980.42;
+      fill: transparent;
+    }
+    50% {
+      stroke-dashoffset: 0;
+    }
+    100% {
+      stroke-dashoffset: 980.42;
+      fill: transparent;
+    }
+  }
+  
+  .loading-text {
     font-weight: bold;
     color: #fff;
-    transform: translate(.4rem);
-    margin-top: 1rem;
-}
+    /* margin-top: 1rem;  */
+    font-size: 1 rem; 
+  }
+  
