--- a/portfolio/src/components/sections/Chatbot.css
+++ b/portfolio/src/components/sections/Chatbot.css
@@ -18,7 +18,7 @@
 .chatbox {
   background-color: transparent;
   color: #333;
-  width: 360px;
+  width: 355px;
   /* height: auto; */
   border-radius: 10px;
   /* border: 1px solid wheat; */
@@ -274,4 +274,39 @@
 .hidden {
   opacity: 0;
   transition: opacity 2s ease-in-out;
+}
+
+.loading-dots {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  height: 20px;
+}
+
+.loading-dots span {
+  width: 8px;
+  height: 8px;
+  margin: 0 3px;
+  background-color: #6C63FF;
+  border-radius: 50%;
+  animation: jumble 1.2s infinite ease-in-out;
+}
+
+.loading-dots span:nth-child(1) {
+  animation-delay: 0s;
+}
+.loading-dots span:nth-child(2) {
+  animation-delay: 0.2s;
+}
+.loading-dots span:nth-child(3) {
+  animation-delay: 0.4s;
+}
+
+@keyframes jumble {
+  0%, 80%, 100% {
+      transform: scale(0);
+  }
+  40% {
+      transform: scale(1);
+  }
 }
