--- a/frontend/src/components/sections/Chatbot.css
+++ b/frontend/src/components/sections/Chatbot.css
@@ -310,3 +310,9 @@
       transform: scale(1);
   }
 }
+.chatbot-disclaimer {
+  font-size: 12px;
+  color: gray;
+  margin-inline: auto;
+  margin-top: 5px;
+}
